<resources>

    <string name="app_name">MeuAppDeLayouts</string> <string name="titulo_toolbar_main">ConstraintLayout</string>
    <string name="botao_blog_post">BLOG POST</string>
    <string name="botao_serie">SÉRIE</string>
    <string name="botao_concurso_textos">CONCURSO DE TEXTOS</string>


    <string name="titulo_blog_post">Utilizando Imagens no Android</string>
    <string name="autor_blog_post">Emerson Carvalho</string>
    <string name="data_blog_post">17/04/2029</string>
    <string name="corpo_texto_blog_post">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam accumsan porttitor diam nec faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque vel auctor quam. Etiam dictum rutrum lacus, in interdum odio posuere eu. Aliquam arcu dui, sagittis at ultricies vel, dictum non dolor. Aliquam tincidunt est at enim volutpat, vel aliquet velit rutrum. Aliquam tincidunt est at enim volutpat, vel aliquet velit rutrum. Aliquam tincidunt est at enim volutpat, vel aliquet velit rutrum.</string> <string name="botao_anterior">ANTERIOR</string>
    <string name="botao_proximo">PRÓXIMO</string>

    <string name="logo_serie_netflix">Netflix</string>
    <string name="serie_titulo">Heartland</string>
    <string name="serie_episodio_exemplo">T10:E08</string>
    <string name="serie_tempo_inicio">20:00</string>
    <string name="serie_tempo_fim">40:00</string>
    <string name="desc_poster_serie">Poster da série</string>
    <string name="desc_icone_retroceder">Retroceder 10 segundos</string>
    <string name="desc_icone_play">Reproduzir</string>
    <string name="desc_icone_configuracoes">Configurações</string>
    <string name="desc_seta_para_baixo">Ver mais episódios</string>


    <string name="titulo_concurso_textos">Melhor Texto</string>
    <string name="texto_concurso_esquerda_exemplo">Morbi in ultrices orci, porttitor tempus ex. Etiam ac posuere est, vitae venenatis turpis. Curabitur nibh est, tempus non bibendum non, euismod vel lectus. Etiam vel accumsan ex, sit amet posuere diam. Aliquam posuere pretium tellus eget vestibulum. Nam aliquet et ligula a elementum. Etiam id mi ut ligula accumsan finibus.</string>
    <string name="texto_concurso_direita_exemplo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam interdum a nunc quis condimentum. Fusce interdum ex sed egestas consequat. Nulla hendrerit gravida ultrices. Sed accumsan orci tristique, cursus est sed, porta ligula. Vestibulum sollicitudin dapibus mollis. Donec cursus nisl ut cursus lacinia.</string>
    <string name="botao_esquerda">ESQUERDA</string>
    <string name="botao_empate">EMPATE</string>
    <string name="botao_direita">DIREITA</string>

</resources>