<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ConcursoTextosActivity">

    <TextView
        android:id="@+id/textTitleConcurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_concurso_textos"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textLeftConcurso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_concurso_esquerda_exemplo"
        android:textSize="16sp"
        android:background="#EEEEEE" android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitleConcurso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/textRightConcurso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_concurso_direita_exemplo"
        android:textSize="16sp"
        android:background="#EEEEEE" android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitleConcurso"
        app:layout_constraintStart_toEndOf="@+id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottomTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textLeftConcurso,textRightConcurso" /> <Button
    android:id="@+id/buttonVoteLeft"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/botao_esquerda"
    app:layout_constraintTop_toBottomOf="@+id/barrierBottomTexts" app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/buttonVoteDraw"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/buttonVoteDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_empate"
        app:layout_constraintTop_toBottomOf="@+id/barrierBottomTexts" app:layout_constraintStart_toEndOf="@+id/buttonVoteLeft"
        app:layout_constraintEnd_toStartOf="@+id/buttonVoteRight"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/buttonVoteRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_direita"
        app:layout_constraintTop_toBottomOf="@+id/barrierBottomTexts" app:layout_constraintStart_toEndOf="@+id/buttonVoteDraw"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>